# dropout-implementation

./: .gitignore  README.md  environment.yml  makefile  pyproject.toml
src/implementation/: dropout.py
src/nn_models/: base.py  lenet.py  overfitting.py  simple.py  vgg.py
src/notebooks/: cifar_10_validation.ipynb  fashion_mnist_validation.ipynb  model_architecture  model_viz.ipynb  validate.ipynb
src/utils/: monte_carlo.py  plots.py  tensor_loader.py  validate.py
