[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropout-implementation"
version = "0.1.0"
description = "A implementation of dropout from scratch"
requires-python = ">=3.10"
dependencies = [
# TODO
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88

[tool.setuptools.packages.find]
where = ["src"]